--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -36,12 +36,12 @@ Thus, we propose the new term \textit{parallel reality} to refer to systems that
 
 \section{Defining Alternate Realities}
 
-Alternate realities have received substantial attention in recent decades, the themes explored for purposes as diverse as education~\cite{Warburton2009} \& new forms of data visualisation~\cite{Coleman2009} to medical~\cite{TenEyck2011} \& military training~\cite{Qiu2009}. Although terms such as \textit{mixed reality} \& \textit{augmented reality} are now relatively common in conversation \& literature, definitions of such terms have often been used in vague \& even conflicting manners.
+Alternate realities (any situation in which the environmental stimuli received by a subject have been somehow modified or mediated) have received substantial attention in recent decades, the themes explored for purposes as diverse as education~\cite{Warburton2009} \& new forms of data visualisation~\cite{Coleman2009} to medical~\cite{TenEyck2011} \& military training~\cite{Qiu2009}. Although terms such as \textit{mixed reality} \& \textit{augmented reality} are now relatively common in conversation \& literature, definitions of such terms have often been used in vague \& even conflicting manners.
 
 This chapter will investigate popular definitions, classifications \& comparisons of alternate realities, combining \& modifying these parameters to produce a canonical set of definitions for the remainder of this thesis, explaining `parallel reality' into these definitions \& models.
 
 \subsection{Milgram \& Kishino's Reality-Virtuality Continuum}
-
+\label{milgram&kishino}
 Paul Milgram, Herman Colquhon and Fumio Kishino addressed the issue of alternate reality definitions in detail and can be accredited with introducing the terms \textit{augmented virtuality} and \textit{mixed reality} to the literature, prompted by their identification of the need for more encompassing terms to supplement the existing definitions of \textit{augmented reality}~\cite{Milgram1994, Milgram1999}.
 
 %However despite these thorough and well-reasoned definitions being published originally in 1994, much of the subsequent literature studied for this review has adopted conflicting, or at least confusing and misleading, definitions.
@@ -98,7 +98,7 @@ Finally the modified matrix removes the central \textit{mixed reality} section f
 %=========================================================================================================
 
 \subsection{Steve Mann's Venn Diagrams}
-
+\label{stevemannvenn}
 Steve Mann, a veteran of wearable computing \& one of the original MIT `gargoyles' etc. \textbf{***Get reference about Steve Mann's history from Sherry Turkle***} presented a Venn diagram to illustrate the relationships between the different categories of alternate realities when discussing the problems that arise with existing taxonomies when discussing reality-modifying devices in general. Mann clarifies the use of `mediated reality' as \textit{``a general framework for artificial modification of human perception by way of devices for augmenting, deliberately diminishing, and more generally, for otherwise altering sensory input''}~\cite{Mann2002a}. Mediated reality thus encompasses all of mixed reality, but also the group of `modulated reality' which includes devices such as eyeglasses that use lenses/mirrors to invert the wearer's view.
 
 Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality at a subset of mixed reality, but then further places virtual reality at a subset of augmented reality \& in turn mixed reality. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can \& do exist $-$ Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is contrary to the diagram's representation of virtual reality as necessarily a subset of augmented reality \& in turn mixed reality. Furthermore the modified diagram introduces augmented virtuality, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced between those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality.
@@ -135,16 +135,14 @@ Visualising the position of the `basic' classes of reality \& virtual reality us
   \label{Mann_venn_mod_3.png}
 \end{figure}
 
-\textbf{Does this final Venn diagram not show that Modulated Reality can exist as Mixed Reality but which *isn't* either Augmented Reality or Augmented Virtuality though?}
-
-\textbf{Also, what about a device that modulates a purely virtual view? Does that mean there should be an intersection between modulated reality \& virtual reality that *isn't* within the realm of mixed reality? Or does modulation of a wholly virtual environment not really count, as the content is by its very definition `modulated' by the fact it is not real?}
+This final iteration of the Venn diagram still contains ambiguity, however it is more diagnostic for categorising the majority of alternate reality systems than the previous two diagrams, whilst also avoiding over-complication. There are two ambiguities to recognise. First, this diagram maintains from the original diagram positions in which a system can exist that is both mixed \& modulated, but which is neither augmented reality nor augmented virtuality. Second, this diagram does not accommodate a purely virtual environment that is then modulated: whether such a system would ever be created is arguable though, as any modulation that could be performed by modulators external to the virtual environment software could be better performed by the software itself.
 
 %=========================================================================================================
 %=========================================================================================================
 
-\section{Adopted Definitions of Alternate Realities}
-
-Following are the definitions \& identifying/classifying criteria for the different categories of alternate realities identified thus far in this chapter.
+\subsection{Summary of Alternate Realities Definitions}
+\label{summaryofalternaterealitydefinitions}
+%Following are the definitions \& identifying/classifying criteria for the different categories of alternate realities identified thus far in this chapter.
 
 %This review has discovered differing (and in some cases conflicting) definitions for the different categories of alternate realities and for the criteria for differentiating between them. What follows in this section represents the definitions and differentiating criteria that this review has adopted after concluding them the most widely accepted and well reasoned.
 
@@ -162,8 +160,14 @@ Following are the definitions \& identifying/classifying criteria for the differ
 \hline
 		
 %=========================================================================================================
+
+\textbf{Alternate Reality} & Any environment in which the environmental stimuli received by a subject have been somehow mediated or modulated. That is, alternate reality is a term that encompasses everything that isn't purely `reality'. \\
+
+\hline
 		
-\textbf{Virtual Reality} & The polar opposite of \textit{reality}, an environment that consists solely of virtual objects, with computer-based quantitative information associated with all of them and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer. \textbf{***cite Milgram and Want***}
+%=========================================================================================================
+		
+\textbf{Virtual Reality} & The polar opposite of \textit{reality}, an environment that consists solely of virtual objects, with computer-based quantitative information associated with all of them and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer.~\cite{Milgram1994, Milgram1999, Want2009}
 
 While traditional definitions of \textit{virtual reality} require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (eg by using Head Mounted Displays \& body tracking techniques to remove logical anchors to the real world~\cite{Druck2006}) the criteria adopted herein are less drastic, classifying the virtual environments presented by video games viewed via 2D monitors as rudimentary implementations of virtual reality; they are completely modelled environments that exist entirely separate to the real world. \\
 		
@@ -177,7 +181,7 @@ While traditional definitions of \textit{virtual reality} require the environmen
 		
 %=========================================================================================================
 
-\textbf{Augmented Reality} & A mixed reality environment comprising a real environment has had virtual objects added to or overlain upon it. A common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using Head Mounted Displays \&/or cameras~\cite{Krevelen2010}. \textbf{***better citation here pls, there was that big AR survey paper***} \\
+\textbf{Augmented Reality} & A mixed reality environment comprising a real environment has had virtual objects added to or overlain upon it. A common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using Head Mounted Displays \&/or cameras~\cite{Krevelen2010}. \\
 
 	%A commercial example of \textit{augmented reality} is the Layar browser for mobile phones, which overlays various forms of data onto the view captured by a phone's camera after determining its location and orientation using GPS, accelerometer and magnetometer readings~\cite{eishita:layar}
 
@@ -203,12 +207,6 @@ While traditional definitions of \textit{virtual reality} require the environmen
 
 \textbf{Modulated Reality} & Platforms that aim to modify the user's view, by multiplicative, diminishing, rotational, etc. techniques, where the user's view can be wholly real, or a mix of real \& virtual content. \\
 
-%=========================================================================================================
-
-\textbf{HyperReality} &  \\
-
-%=========================================================================================================
-
 \hline
 
 \end{longtable}
@@ -217,61 +215,97 @@ While traditional definitions of \textit{virtual reality} require the environmen
 %=========================================================================================================
 %=========================================================================================================
 
+\section{Additional Alternate Reality Terms}
 
-``HyperReality (HR) is a hypothetical communications infrastructure made possible by information technology. It allows the commingling of physical reality with virtual reality and human intelligence with artificial intelligence.''
+In addition to the range of alternate realities covered in the previous section, there are several further alternate reality terms that requiring understanding but which do not feature or fit well into the frameworks presented in sections \ref{milgram&kishino} to \ref{stevemannvenn}.
 
-``HyperReality (HR) is a technological capability, like nanotechnology, human cloning and artificial intelligence. Like them, it does not as yet exist in the sense of being clearly demonstrable and publicly available. Like them, it is maturing in laboratories where the question `if?' has been replaced by `when?' And like them, the implications of its appearance as a basic infrastructure technology are profound and merit careful consideration.''
+%=========================================================================================================
 
-``The concept of HyperReality (HR), like the concepts of nanotechnology, cloning and artificial intelligence, is in principle very simple. It is nothing more than the technological capability to intermix virtual reality (VR) with physical reality (PR) and artificial intelligence (AI) with human intelligence (HI) in a way that appears seamless and allows interaction.''
+\subsection{HyperReality}
 
-``The project that led to the concept of HR began with the idea of teleconferencing in virtual reality.
+HyperReality (HR) is the term given to a hypothetical communications infrastructure that allows the seamless commingling of reality \& virtual reality, human intelligence \& artificial intelligence. In terms of the previously explored alternate reality terms, a HR system is most accurately described as facilitating the creation of mixed reality environments that bring virtual reality content into real world locations $-$ ``It seeks to make virtual reality something that is experienced as part of physical reality, so that virtual and real phenomena appear to interact with each other: HR is VR \textit{as well as, not instead of,} PR''~\cite{Terashima2001} (emphasis original).
 
-ATR (Advanced Telecommunications Research) in Kansai Science City
+HR is an abstract, high level term that refers to a category of mixed reality environments that combine VR content with views of the real world in a manner that arguably falls under the moniker of augmented reality, however with HR there is an emphasis that the integration of the virtual reality content into the real world be performed seamlessly, such that HR enables hyperreality (this latter non-capitalised term referring to the postmodern usage of the word wherein an observer is unable to distinguish between objects that are real \& objects that are virtual).
 
-``HyperReality is a technological capability that makes possible the seamless integration of physical reality and virtual reality, human intelligence and artificial intelligence.''
+%``HyperReality (HR) is a hypothetical basic communications infrastructure that allows possible by information technology. It allows the commingling of physical reality with virtual reality and human intelligence with artificial intelligence.''
 
-Must be seamless, without a `bezel' (HyperReality p142)
+%``HyperReality (HR) is a technological capability, like nanotechnology, human cloning and artificial intelligence. Like them, it does not as yet exist in the sense of being clearly demonstrable and publicly available. Like them, it is maturing in laboratories where the question `if?' has been replaced by `when?' And like them, the implications of its appearance as a basic infrastructure technology are profound and merit careful consideration.''
 
-``HR makes ir possible for the physically real inhabitants of one place to purposively coact with the inhabitants of remote locations as welll as with computer-generated imaginary or artificial life forms in a HyperWorld.
+%``The concept of HyperReality (HR), like the concepts of nanotechnology, cloning and artificial intelligence, is in principle very simple. It is nothing more than the technological capability to intermix virtual reality (VR) with physical reality (PR) and artificial intelligence (AI) with human intelligence (HI) in a way that appears seamless and allows interaction.''
 
-Distributed Virtual Reality - simply shared VR that is accessible by multiple simultaneous users via telecommunications infrastructure (HyperReality p13)
+%``The project that led to the concept of HR began with the idea of teleconferencing in virtual reality.
 
-HR is a single mixed reality environment (HyperReality p26)
+%ATR (Advanced Telecommunications Research) in Kansai Science City
 
-``It seeks to make virtual reality something that is experienced as part of physical reality, so that virtual and real phenomena appear to interact with each other: HR is VR \textit{as well as, not instead of,} PR.'' (HyperReality p31, emphasis original)
+%``HyperReality is a technological capability that makes possible the seamless integration of physical reality and virtual reality, human intelligence and artificial intelligence.''
 
-HyperReality is a technological metaconcept (HyperReality p41)
+%Must be seamless, without a `bezel' (HyperReality p142)
 
-HyperReality is a technology that enables hyperreality (the postmodern term) (HyperReality p41)
+%``HR makes it possible for the physically real inhabitants of one place to purposively coact with the inhabitants of remote locations as well as with computer-generated imaginary or artificial life forms in a HyperWorld. ***PoSR link
 
-``HyperReality means a reality in which there is the extra dimension of virtual reality within normal physical reality'' (HyperReality p42)
+%Distributed Virtual Reality - simply shared VR that is accessible by multiple simultaneous users via telecommunications infrastructure (HyperReality p13)
 
-``The implication of HR is that, wherever you are, you could be somewhere else.'' (HyperReality p149) - not sure I agree with this as definition of HR though, as HR is about VR *as well as* rather than instead of PR - my mobile parallel reality is more like VR instead of PR, but with the ability of rapidly temporal change in which is being observed.
+%HR is a single mixed reality environment (HyperReality p26)
 
+%``It seeks to make virtual reality something that is experienced as part of physical reality, so that virtual and real phenomena appear to interact with each other: HR is VR \textit{as well as, not instead of,} PR.'' (HyperReality p31, emphasis original)
 
+%HyperReality is a technological metaconcept (HyperReality p41)
 
+%HyperReality is a technology that enables hyperreality (the postmodern term) (HyperReality p41)
 
-From Simulacra and Simulation (Jean Baudrillard), Hyperreality is essentially an inability of consciousness to distinguish reality from a simulation of reality. Hyperreality is seen as a condition in which what is real and what is fiction are seamlessly blended together so that there is no clear distinction between where one ends and the other begins. It allows the commingling of physical reality with virtual reality (VR) and human intelligence with artificial intelligence (AI).
+%``HyperReality means a reality in which there is the extra dimension of virtual reality within normal physical reality'' (HyperReality p42)
 
+%``The implication of HR is that, wherever you are, you could be somewhere else.'' (HyperReality p149) - not sure I agree with this as definition of HR though, as HR is about VR *as well as* rather than instead of PR - my mobile parallel reality is more like VR instead of PR, but with the ability of rapidly temporal change in which is being observed.
 
+% =======
 
+%From Simulacra and Simulation (Jean Baudrillard), Hyperreality is essentially an inability of consciousness to distinguish reality from a simulation of reality. Hyperreality is seen as a condition in which what is real and what is fiction are seamlessly blended together so that there is no clear distinction between where one ends and the other begins. It allows the commingling of physical reality with virtual reality (VR) and human intelligence with artificial intelligence (AI).
+
+%=========================================================================================================
+
+\subsection{PolySocial Reality}
+
+PolySocial Reality (PoSR) describes situations in which people multiplex their physical reality, where they engage in face-to-face social interaction, with Web-based social networks \& apps for Internet mediated social interaction. Instead of defining a new type of alternate reality in terms of the provenance of the audiovisual stimuli received by a subject, PoSR is concerned with the provenance of the multiple, simultaneous social interactions that are mediated through various telecommunications media~\cite{Applin2012}.
+
+%"Lifton does not fully address the social element and aspects of Dual Reality. In part, this results from the rather 'fixed' locations that he is linking, and by his restriction of the social components to those people in the lab who share both aspects of the dual reality. The introduction of mobility via phones and other devices to the context will require a generalisation of the concept of Dual Reality." Feb 2011
+
+%"PoSR builds on a modification of Lifton's definition of Dual Reality: "An environment resulting from the interplay" among two or more dual realities." Feb 2011
+
+%"At any given moment, as people are interacting with mobile devices in the 'non-place' they are intersecting and/or colliding with others in 'place', who may not own such devices." July 2011
+
+%"...altering the physical space into a hybrid of concurrent 'place' and 'non-place'." July 2011
+
+%"...within the context of the Future Internet, using terms like 'Augmented Reality', 'Dual Reality', 'Blended Reality', and 'Mixed Reality' ('Virtual Reality' is omitted for lacking interactivity with other worlds) may be limiting in scope. Those terms do not currently addres the multiplexing scenario that is commonplace amongst groups of people using the Internet simultaneously, each with a different multiplexed set of 'mixed' realities. The complete set of those multiplexed 'mixed realities' connected through the social networks that they reside within, we refer to by the name of PolySocial reality (PoSR)." July 2011
+
+%"Lifton discusses the 'vacancy problem' in relation to users of virtual worlds both with respect to their (lack) of presence in their local 'reality' when engaged in a virtual world and the paucity of the virtual world when users are not engaged. He proposes that Dual Reality potentially address the 'vacancy problem' by making both the place (local reality) and the non-place (virtual reality) interoperable in some respects by mapping information from each to the other using real, or virtual, sensors. This is also a useful concept for discussing social and cultural issues arising from the increased use of technologies to support the user experience for augmented, mixed and blended realities. Lifton does not fully address the social element and aspects of Dual Reality. In part, this results from the rather 'fixed' locations that he is linking, and by his restriction of the social component to those people in the lab who share both aspects of the dual reality. The introduction of mobility via phones and other devices to the context will require a generalisation of Dual Reality. July 2011
+
+%``Dual Realitiy relates to interoperability between the two realities through sensors and actuators, not simply by rendering one in the other.'' July 2011
+
+%
+
+%=========================================================================================================
+%=========================================================================================================
 
 \section{Cross Reality}
 
-Cross reality is the ubiquitous mixed reality situation that arises from the fusion of real-world sensor/actuator infrastructure with virtual environments, such that augmented reality and augmented virtuality manifest simultaneously and facilitate synchronous multi-directional exchange of media and control information between real and virtual environments. Sensors collect and tunnel dense real-world data into virtual environments where they are interpreted and displayed to dispersed users, whilst interaction of virtual participants simultaneously incarnates into the real world through a plenitude of diverse displays and actuators~\cite{Paradiso2009}.
+Cross reality is the ubiquitous mixed reality situation that arises from the fusion of real-world sensor/actuator infrastructure with virtual environments, such that augmented reality and augmented virtuality manifest simultaneously and facilitate synchronous bidirectional exchange of media and control information between real and virtual environments. Sensors collect and tunnel dense real-world data into virtual environments where they are interpreted and displayed to dispersed users, whilst interaction of virtual participants simultaneously incarnates into the real world through a plenitude of diverse displays and actuators~\cite{Paradiso2009}.
 
-The principle features that distinguish cross reality from the other alternate realities covered by this chapter are;
+The principle features that distinguish cross reality from the other alternate realities covered in section \ref{summaryofalternaterealitydefinitions} are;
 \begin{enumerate}
 	\item a shift from single- to bi-directional information flow between real and virtual environments~\cite{kim:practical}
 	\item that both environments are complete unto themselves (but are enriched by their ability to mutually reflect, influence and merge into one another).~\cite{lifton:merging}
 \end{enumerate}
 
-\textit{This thesis presents systems that focus on the second aspect above \& extends it by permitting both environments to be experienced at any time \& position.}
+One motivation behind this early Cross Reality work was what Lifton dubbed `the vacancy problem';
+\begin{quote}
+\textit{``the noticeable and profound absence of a person from one world, either real or virtual, while they are participating in the other. Simply put, the vacancy problem arises because people do not currently have the means to be in more than one place (reality) at a time.''}
+\end{quote}
 
-%=========================================================================================================
+\textbf{See HyperReality p35}
 
-\subsection{The History of Cross Reality}
+%This thesis presents systems that focus on the second aspect above \& extends it by permitting both environments to be experienced at any time \& position.
 
+\subsection{History}
 Cross reality was realised \& developed as a research area by the Responsive Environments Group at MIT's Media Lab, centred around the research of Joshua Lifton~\cite{Lifton2007a} in combining the Plug sensor/actuator platform~\cite{Lifton2007b} with a Second Life hosted virtual model of the physical Lab in the `Shadow Lab' project. These projects furthered initial work by the IBM Virtual Universe Community~\cite{Hughes2006, Hughes2006a,Hughes2006b}, whose progress toward a cross reality platform was confirmed via personal correspondence;
 
 \begin{quote}
@@ -285,9 +319,7 @@ Cross reality was realised \& developed as a research area by the Responsive Env
 \label{lifton_shadow_lab.png}
 \end{figure}
 
-The Shadow Lab did not allow for tandem visual engagement with both constituent environments of the cross reality platform.
-
-The Ubiquitous Sensor Portal project that followed the Dual Reality Lab partially addressed this, by situating 45 I/O rich `portals', shown in figure \ref{ubiquitous_sensor_portal.jpg}, throughout the Media Lab, each with a corresponding extension in Second Life. However in stark contrast to the Dual Reality Lab, the virtual portals were not situated in a simulation of the real Media Lab in situations corresponding to their physical location, but instead used a more abstract virtual representation with a geometric layout; this design, shown in figure \ref{ubiquitous_sensor_portal_virtual.png}, reflected intellectual affiliation as opposed to real-world locationHowever in stark contrast to the Dual Reality Lab, the virtual portals were not situated in a simulation of the real Media Lab in situations corresponding to their physical location, but instead used a more abstract virtual representation with a geometric layout; this design, shown in figure \ref{ubiquitous_sensor_portal_virtual.png}, reflected intellectual affiliation as opposed to real-world location
+The Shadow Lab project did not allow for tandem visual engagement with both constituent environments of the cross reality platform. This was addressed in part by the following Ubiquitous Sensor Portal project, which situated 45 I/O rich `portals', shown in figure \ref{ubiquitous_sensor_portal.jpg}, throughout the Media Lab, each with a corresponding extension in Second Life. However in stark contrast to the Dual Reality Lab, the virtual portals were not situated in a simulation of the real Media Lab in situations corresponding to their physical location, but instead used a more abstract virtual representation with a geometric layout; this design, shown in figure \ref{ubiquitous_sensor_portal_virtual.png}, reflected intellectual affiliation as opposed to real-world location.
 
 \begin{figure}[h]
 \centering
@@ -298,25 +330,8 @@ The Ubiquitous Sensor Portal project that followed the Dual Reality Lab partiall
 
 %=========================================================================================================
 
-\subsection{The Vacancy Problem}
-
-Lifton identifies the `vacancy problem';
-\begin{quote}
-\textit{``the noticeable and profound absence of a person from one world, either real or virtual, while they are participating in the other. Simply put, the vacancy problem arises because people do not currently have the means to be in more than one place (reality) at a time.''}
-\end{quote}
-as a fundamental characteristic of the current generation of virtual worlds and proposes dual reality, more closely linking the real world with the virtual world, as an approach to mitigate the problem.
-
-\textbf{See HyperReality p35}
-
-%=========================================================================================================
-
-\subsection{Lifton's Virtual Worlds Taxonomy}
-
-As the prominent figure in the development of the cross reality paradigm it is worth comparing Joshua Lifton's definitions for different categories of alternate realities and the relationships between them~\cite{Lifton2007a} in the current context.
-
-Lifton's definitions, or more accurately his relationships between, the terms \textit{reality}, \textit{augmented reality}, \textit{mixed reality} and \textit{virtual reality} do not perfectly match the consensus that this review has observed. Lifton defines the terms individually in agreement with the consensus, however doesn't proffer the conclusion that mixed reality is a broad term that includes augmented reality. He also doesn't mention augmented virtuality, even though his cross reality projects could be construed as implementing it. Finally his diagram that alludes to Milgram's continua and is included as figure \ref{original_lifton_axis.png}, situates mixed reality at an incorrect position, implying that Lifton's definition of mixed reality is of a discrete state to that of augmented reality, even though his textual definition of mixed reality hints that it logically encompasses augmented reality. This review presents a modified version of Lifton's diagram to illustrate these differences as figure \ref{modified_lifton_axis.png}.
-
-Lifton does however explain that while such a taxonomy can be successfully applied to most alternate reality efforts, it does not well address the concept of cross reality where there are two complete realities, one real and one virtual. \textbf{***is there a direct citation for this?***}
+\subsection{Position}
+Lifton's use of alternate reality terminology~\cite{Lifton2007a} does not reach the conclusion that mixed reality is a broad term that encompasses both augmented reality \& augmented virtuality $-$ in fact, he doesn't mention augmented virtuality even though his Cross Reality systems arguably cause it to manifest. The diagram that he presents (figure \ref{original_lifton_axis.png}) \& alludes to Milgram's continua places mixed reality as a separate classification of alternate reality between augmented reality \& virtual reality, even though his discussion of mixed reality hints that it logically encompasses augmented reality. Figure \ref{modified_lifton_axis.png} shows Lifton's diagram updated to show the definitions adopted in section \ref{summaryofalternaterealitydefinitions}.
 
 \begin{figure}[h]
 	\centering
@@ -332,9 +347,9 @@ Lifton does however explain that while such a taxonomy can be successfully appli
 	\label{modified_lifton_axis.png}
 \end{figure}
 
-%=========================================================================================================
+Lifton does however explain that while such a taxonomy can be successfully applied to most alternate reality efforts, it does not well address the concept of cross reality where there are two complete realities, one real and one virtual. \textbf{***is there a direct citation for this?***}
 
-\clearpage
+%=========================================================================================================
 
 \subsection{Cross Reality \& Milgram \& Kishino's Reality-Virtuality Continuum}
 
