--- a/bib.bib
+++ b/bib.bib
@@ -48,7 +48,7 @@ year = {2012}
 }
 @article{Andersen,
 author = {Andersen, Peter B\o gh},
-file = {:array\_z/Downloads/TangObj.pdf:pdf},
+file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Andersen - Unknown - Tangible Objects Connecting Informational and Physical space.pdf:pdf},
 title = {{Tangible Objects : Connecting Informational and Physical space}}
 }
 @article{Appino1992,
@@ -779,6 +779,12 @@ title = {{Arduino sketch for Pangolin}},
 url = {https://bitbucket.org/cj\_davies/arduino\_hmc6434\_ublox\_max\_6\_tinygps},
 urldate = {01/04/2013}
 }
+@misc{Daviesb,
+author = {Davies, C J},
+title = {{Database as tar archive suitable for input into pg\_restore}},
+url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
+urldate = {01/04/2013}
+}
 @misc{Daviesc,
 author = {Davies, C J},
 title = {{Database as plain-text SQL script file}},
@@ -789,12 +795,6 @@ urldate = {01/04/2013}
 author = {Davies, C J},
 title = {{Pangolin source code}},
 url = {https://bitbucket.org/cj\_davies/viewer-release-serial-io},
-urldate = {01/04/2013}
-}
-@misc{Daviesb,
-author = {Davies, C J},
-title = {{Database as tar archive suitable for input into pg\_restore}},
-url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
 urldate = {01/04/2013}
 }
 @inproceedings{Davies2012,
@@ -1383,16 +1383,6 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0921889009001092},
 volume = {57},
 year = {2009}
 }
-@misc{Heeter2003,
-abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
-author = {Heeter, Carrie},
-booktitle = {Presence: Teleoperators and Virtual Environments},
-number = {4},
-pages = {335--345},
-title = {{Reflections on Real Presence by a Virtual Person}},
-volume = {12},
-year = {2003}
-}
 @article{Heeter1992,
 abstract = {What do you feel when you enter a virtual world? What creates the experience of presence? What factors contribute to making you feel like you are there1 ?},
 author = {Heeter, Carrie},
@@ -1406,6 +1396,16 @@ title = {{Being there: The subjective experience of presence}},
 url = {http://dl.acm.org/citation.cfm?id=196589},
 volume = {1},
 year = {1992}
+}
+@misc{Heeter2003,
+abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
+author = {Heeter, Carrie},
+booktitle = {Presence: Teleoperators and Virtual Environments},
+number = {4},
+pages = {335--345},
+title = {{Reflections on Real Presence by a Virtual Person}},
+volume = {12},
+year = {2003}
 }
 @article{Held1992,
 author = {Held, Richard and Durlach, Nathaniel},
@@ -1428,6 +1428,15 @@ title = {{3D Social Virtual Worlds: Research Issues and Challenges}},
 url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4428344},
 volume = {12},
 year = {2008}
+}
+@article{Hill2004,
+abstract = { Realtime image processing provides a general framework for robust mediated reality problems. This paper presents a realtime mediated reality system that is built upon realtime image processing algorithms. It has been shown that the graphics processing unit (GPU) is capable of efficiently performing image processing tasks. The system presented uses a parallel GPU architecture for image processing that enables realtime mediated reality. Our implementation has many benefits; the graphics hardware has high throughput and low latency; the GPU's are not prone to jitter. Additionally, the CPU is kept available for user applications. The system is easily constructed, consisting of readily available commodity hardware.},
+author = {Hill, R. and Fung, J. and Mann, S.},
+issn = {1522-4880},
+journal = {2004 International Conference on Image Processing, 2004. ICIP '04.},
+title = {{A parallel mediated reality platform}},
+volume = {5},
+year = {2004}
 }
 @article{Hodgson2012,
 author = {Hodgson, Eric and Bachmann, Eric},
@@ -1476,24 +1485,24 @@ url = {http://www.htc.com/www/smartphones/htc-one-s/},
 urldate = {28/03/2013},
 year = {2013}
 }
-@misc{Hughes2009,
+@misc{Hughes2006,
 author = {Hughes, Ian},
-title = {{Wimbledon – A fanployee perspective}},
-url = {http://www.feedingedge.co.uk/blog/2009/06/15/wimbledon-a-fanployee-perspective/},
+title = {{Lessons from second life}},
+url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
+year = {2006}
+}
+@misc{Hughes2006c,
+author = {Hughes, Ian},
+title = {{Wimbledon in Second Life}},
+url = {http://eightbar.co.uk/2006/06/27/wimbledon-in-second-life/},
 urldate = {21/05/2012},
-year = {2009}
+year = {2006}
 }
 @misc{Hughes2006a,
 author = {Hughes, Ian},
 title = {{Second Life – Outside in}},
 url = {http://eightbar.co.uk/2006/04/09/second-life-outside-in/},
 urldate = {21/05/2012},
-year = {2006}
-}
-@misc{Hughes2006,
-author = {Hughes, Ian},
-title = {{Lessons from second life}},
-url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
 year = {2006}
 }
 @misc{Hughes2006b,
@@ -1503,12 +1512,12 @@ url = {http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/},
 urldate = {21/05/2012},
 year = {2006}
 }
-@misc{Hughes2006c,
+@misc{Hughes2009,
 author = {Hughes, Ian},
-title = {{Wimbledon in Second Life}},
-url = {http://eightbar.co.uk/2006/06/27/wimbledon-in-second-life/},
+title = {{Wimbledon – A fanployee perspective}},
+url = {http://www.feedingedge.co.uk/blog/2009/06/15/wimbledon-a-fanployee-perspective/},
 urldate = {21/05/2012},
-year = {2006}
+year = {2009}
 }
 @misc{Hunt,
 author = {Hunt, Darran},
@@ -1572,18 +1581,18 @@ title = {{Accuracy of IndoorAtlas indoor positioning system}},
 url = {https://www.indooratlas.com/faq\#q242897},
 urldate = {13/01/2014}
 }
+@misc{IndoorAtlasLtd.,
+author = {{IndoorAtlas Ltd.}},
+title = {{Technology}},
+url = {http://www.indooratlas.com/Technology},
+urldate = {11/02/2013}
+}
 @unpublished{IndoorAtlasLtd.2012,
 author = {{IndoorAtlas Ltd.}},
 pages = {5},
 title = {{Ambient magnetic field-based indoor location technology}},
 url = {http://web.indooratlas.com/web/WhitePaper.pdf},
 year = {2012}
-}
-@misc{IndoorAtlasLtd.,
-author = {{IndoorAtlas Ltd.}},
-title = {{Technology}},
-url = {http://www.indooratlas.com/Technology},
-urldate = {11/02/2013}
 }
 @incollection{Insko2003,
 abstract = {Virtual reality (VR) systems enable the user to feel as if they are present in a computer generated environment. But how do we determine the extent to which a user feels present in the virtual environment? This chapter examines three categories of methods commonly used for measuring presence; their use in the field, advantages, and disadvantages. Subjective measures rely on self-assessment by the user. Users answer questions such as "How real did the environment seem to you?", "Was the environment like a place you visited, or a series of images presented to you?". Behavioral measures examine actions or manners exhibited by the user that are responses to objects or events in the virtual environment. For example, does the user duck if a virtual object is thrown at his head. Physiological methods attempt to measure presence by gauging changes in the subject's heart rate, skin temperature, skin conductance, breathing rate, etc. In a stress-inducing virtual environment does the user exhibit physiological signs of stress? How do these methods compare when using the criteria of reliability, validity, objectivity, and sensitivity.},
@@ -2092,6 +2101,36 @@ url = {http://www.businessweek.com/magazine/content/06\_47/b4010068.htm?chan=tc\
 urldate = {21/05/2012},
 year = {2006}
 }
+@inproceedings{lifton:adoption,
+annote = {        From Duplicate 1 (                           Consumer Adoption of Cross Reality Systems                         - Lifton, Joshua )
+                
+Retrospective piece written by Lifton after moving from academia (MIT)
+to industry (Electric Sheep Company) \& then on to consultant \& educator.
+Lists observations of what has marred the wider uptake of cross reality.
+        
+> Second Life failed to achieve the consumer uptake it promised
+> Adoption of hardware required for cross reality is slow; even now we
+only have a smattering of sensors in common use (passport RFID, mobile
+phone location/orientation, body-gesture in games consoles)
+> Virtual worlds do not allow as much expression of identity as online
+social networks, soon social networks may begin to fit the bill of VWs
+        
+Confirmation from Lifton himself that 'dual reality' \& 'cross reality'
+are the same thing under different names.
+        
+      },
+author = {Lifton, Joshua},
+booktitle = {Proceedings of the International Symposium on Ubiquitous Virtual Reality 2010 (ISUVR 2010)},
+doi = {10.1109/ISUVR.2010.26},
+isbn = {978-1-4244-7702-9},
+keywords = {cross reality,dual reality,ubiquitous computing,ubiquitous virtual reality,virtual worlds},
+month = jul,
+pages = {9--11},
+publisher = {IEEE},
+title = {{Consumer Adoption of Cross Reality Systems}},
+url = {http://dl.acm.org/citation.cfm?id=1848072.1848338},
+year = {2010}
+}
 @phdthesis{Lifton2007a,
 address = {Department of Media Arts and Sciences},
 annote = {        From Duplicate 1 (                           Dual Reality: An Emerging Medium                         - Lifton, Joshua )
@@ -2131,43 +2170,13 @@ title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
 url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
 year = {2009}
 }
-@inproceedings{lifton:adoption,
-annote = {        From Duplicate 1 (                           Consumer Adoption of Cross Reality Systems                         - Lifton, Joshua )
-                
-Retrospective piece written by Lifton after moving from academia (MIT)
-to industry (Electric Sheep Company) \& then on to consultant \& educator.
-Lists observations of what has marred the wider uptake of cross reality.
-        
-> Second Life failed to achieve the consumer uptake it promised
-> Adoption of hardware required for cross reality is slow; even now we
-only have a smattering of sensors in common use (passport RFID, mobile
-phone location/orientation, body-gesture in games consoles)
-> Virtual worlds do not allow as much expression of identity as online
-social networks, soon social networks may begin to fit the bill of VWs
-        
-Confirmation from Lifton himself that 'dual reality' \& 'cross reality'
-are the same thing under different names.
-        
-      },
-author = {Lifton, Joshua},
-booktitle = {Proceedings of the International Symposium on Ubiquitous Virtual Reality 2010 (ISUVR 2010)},
-doi = {10.1109/ISUVR.2010.26},
-isbn = {978-1-4244-7702-9},
-keywords = {cross reality,dual reality,ubiquitous computing,ubiquitous virtual reality,virtual worlds},
-month = jul,
-pages = {9--11},
-publisher = {IEEE},
-title = {{Consumer Adoption of Cross Reality Systems}},
-url = {http://dl.acm.org/citation.cfm?id=1848072.1848338},
-year = {2010}
-}
 @inproceedings{Lifton2007b,
 address = {New York, New York, USA},
 annote = {Paper about the Plug sensor/actuator platform developed by the Media Lab for Lifton's research. Published before Lifton's PhD so doesn't contain as much information as the PhD does about Plug \& its uses.},
 author = {Lifton, Joshua and Feldmeier, Mark and Ono, Yasuhiro and Lewis, Cameron and Paradiso, Joseph A.},
 booktitle = {Proceedings of the 6th international conference on Information processing in sensor networks - IPSN '07},
 doi = {10.1145/1236360.1236377},
-file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lifton et al. - 2007 - A Platform for Ubiquitous Sensor Deployment in Occupational and Domestic Environments.pdf:pdf},
+file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lifton et al. - 2007 - A platform for ubiquitous sensor deployment in occupational and domestic environments.pdf:pdf},
 isbn = {978159593638X},
 month = apr,
 pages = {119},
@@ -2636,11 +2645,6 @@ title = {{The Second Life of a Sensor: Integrating Real-world Experience in Virt
 url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.147.1457},
 year = {2008}
 }
-@misc{mit:doppel,
-author = {MIT},
-howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
-title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
-}
 @misc{MIT,
 annote = {        From Duplicate 1 (                           Responsive Environments Group                         - MIT )
                 
@@ -2657,6 +2661,11 @@ author = {MIT},
 howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/\}},
 title = {{Responsive Environments Group}},
 url = {http://www.media.mit.edu/resenv/}
+}
+@misc{mit:doppel,
+author = {MIT},
+howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
+title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
 }
 @article{Mittal2011,
 author = {Mittal, Manas and Paradiso, Joseph A},
@@ -2693,12 +2702,6 @@ pages = {295--296},
 title = {{Localization System for Large Indoor Environments Using Invisible markers}},
 year = {2008}
 }
-@inproceedings{Okura2011,
-author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
-booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
-title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
-year = {2011}
-}
 @article{Okura2006,
 abstract = {Augmented Telepresence is a technique for viewing a remote site using immersive displays.},
 author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
@@ -2708,6 +2711,12 @@ pages = {4503--4503},
 title = {{Fly-through Heijo Palace Site : Augmented Telepresence Using Aerial Omnidirectional Videos}},
 volume = {1},
 year = {2006}
+}
+@inproceedings{Okura2011,
+author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
+booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
+title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
+year = {2011}
 }
 @misc{Oliver2010,
 author = {Oliver, Iain A and Miller, Alan H D and Allison, Colin},
@@ -2958,20 +2967,6 @@ author = {Pardue, Laurel and Dublon, Gershon and Jethwani, Anisha and Prouty, Je
 title = {{DoppelLab}},
 url = {http://www.media.mit.edu/resenv/doppellab/}
 }
-@inproceedings{park:xcream,
-address = {New York, NY, USA},
-author = {Park, Kyungeun and Yun, Jekuk and Byun, Changhyun and Kim, Yanggon and Chang, Juno},
-booktitle = {Proceedings of the 12th International Conference on Information Integration and Web-based Applications \&\#38; Services},
-doi = {http://doi.acm.org/10.1145/1967486.1967597},
-isbn = {978-1-4503-0421-4},
-keywords = {RFID (radio frequency identifcation),USN (universal sensor network),XCREAM (XLogic collaborative RFID/USN-Enabled ada,collaboration,middleware framework},
-pages = {692--695},
-publisher = {ACM},
-series = {iiWAS '10},
-title = {{XCREAM: collaborative middleware framework for RFID/USN-enabled applications}},
-url = {http://doi.acm.org/10.1145/1967486.1967597},
-year = {2010}
-}
 @inproceedings{Park2010,
 address = {New York, New York, USA},
 annote = {'XLogic Collaborative RFID/USN-Enabled Adaptive Middleware' aims to all-
@@ -2995,6 +2990,20 @@ pages = {692},
 publisher = {ACM Press},
 title = {{XCREAM}},
 url = {http://dl.acm.org/citation.cfm?id=1967486.1967597},
+year = {2010}
+}
+@inproceedings{park:xcream,
+address = {New York, NY, USA},
+author = {Park, Kyungeun and Yun, Jekuk and Byun, Changhyun and Kim, Yanggon and Chang, Juno},
+booktitle = {Proceedings of the 12th International Conference on Information Integration and Web-based Applications \&\#38; Services},
+doi = {http://doi.acm.org/10.1145/1967486.1967597},
+isbn = {978-1-4503-0421-4},
+keywords = {RFID (radio frequency identifcation),USN (universal sensor network),XCREAM (XLogic collaborative RFID/USN-Enabled ada,collaboration,middleware framework},
+pages = {692--695},
+publisher = {ACM},
+series = {iiWAS '10},
+title = {{XCREAM: collaborative middleware framework for RFID/USN-enabled applications}},
+url = {http://doi.acm.org/10.1145/1967486.1967597},
 year = {2010}
 }
 @misc{Parris2007,
@@ -3096,6 +3105,17 @@ booktitle = {Proceedings of the 5th Annual International Workshop on Presence},
 title = {{Measuring presence in augmented reality environments: design and a first test of a questionnaire}},
 year = {2002}
 }
+@misc{Regenbrecht2002a,
+abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
+author = {Regenbrecht, Holger and Schubert, Thomas},
+booktitle = {Presence: Teleoperators and Virtual Environments},
+issn = {1054-7460},
+number = {4},
+pages = {425--434},
+title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
+volume = {11},
+year = {2002}
+}
 @article{Regenbrecht1992,
 author = {Regenbrecht, Holger and Schubert, Thomas},
 keywords = {augmented reality,sense of presence},
@@ -3152,6 +3172,14 @@ title = {{Responsive Environments Group - Research Themes}},
 url = {http://resenv.media.mit.edu/motto.html},
 urldate = {18/05/2012}
 }
+@book{Rheingold1992,
+author = {Rheingold, Howard},
+isbn = {978-0671778972},
+pages = {416},
+publisher = {Simon \& Schuster},
+title = {{Virtual Reality: The Revolutionary Technology of Computer-Generated Artificial Worlds - and How It Promises to Transform Society}},
+year = {1992}
+}
 @book{Rheingold2000,
 address = {Cambridge, MA},
 author = {Rheingold, Howard},
@@ -3161,14 +3189,6 @@ pages = {447},
 publisher = {The MIT Press},
 title = {{The Virtual Community: Homesteading on the Electronic Frontier}},
 year = {2000}
-}
-@book{Rheingold1992,
-author = {Rheingold, Howard},
-isbn = {978-0671778972},
-pages = {416},
-publisher = {Simon \& Schuster},
-title = {{Virtual Reality: The Revolutionary Technology of Computer-Generated Artificial Worlds - and How It Promises to Transform Society}},
-year = {1992}
 }
 @inproceedings{Richardson2004,
 address = {New York, New York, USA},
@@ -3364,6 +3384,19 @@ title = {{SL1200}},
 url = {http://www.sarantel.com/products/sl1200},
 urldate = {11/02/2013}
 }
+@incollection{Schubert1999,
+abstract = {Schubert, T.W., Friedman, F., \& Regenbrecht, H.T. (1999). Embodied presence in virtual environments. In: Paton R, Neilson I (Eds.). Visual representations and interpretations. Springer-Verlag, London, pp. 268–278.},
+author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
+booktitle = {Visual representations and interpretations},
+doi = {10.1007/978-1-4471-0563-3\_30},
+editor = {{Paton R}, Neilson I},
+isbn = {9781441909183},
+pages = {268--278},
+publisher = {Springer-Verlag},
+title = {{Embodied presence in virtual environments}},
+url = {http://link.springer.com/chapter/10.1007/978-1-4471-0563-3\_30},
+year = {1999}
+}
 @misc{Schubert2001,
 abstract = {Within an embodied cognition framework, it is argued that presence in a virtual environment (VE) develops from the construction of a spatial-functional mental model of the VE. Two cognitive processes lead to this model: the representation of bodily actions as possible actions in the VE, and the suppression of incompatible sensory input. It is hypothesized that the conscious sense of presence reflects these two components as spatial presence and involvement. This prediction was con- firmed in two studies (N ? 246 and N ? 296) assessing self-reports of presence and immersion experiences. Additionally, judgments of “realness” were observed as a third presence component. A second-order factor analysis showed a distinction between presence, immersion, and interaction factors. Building on these results, a thirteen-item presence scale consisting of three independent components was de- veloped and verified using confirmatory factor analyses across the two studies. Presence is a construct, a variable with various levels and dimensions. Biocca and Delaney (1995, p. 62)},
 author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
@@ -3432,29 +3465,6 @@ title = {{Welcome to the New Journal}},
 volume = {1},
 year = {1992}
 }
-@article{Sivan2011,
-abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {3},
-title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
-url = {https://journals.tdl.org/jvwr/article/view/6140},
-volume = {4},
-year = {2011}
-}
-@article{Sevan2008,
-annote = {Very good \& thorough background/introduction to 'real virtual worlds', assuming no previous knowledge into the subject. Focuses strongly on Second Life.},
-author = {Sivan, Yesha},
-issn = {19418477},
-journal = {Journal of Virtual Worlds Research},
-keywords = {0,3d,attribution no derivative works 3,commerce,community,creation,journal virtual,second life,under creative commons,united states license,virtual worlds,work copyrighted,worlds research},
-number = {1},
-pages = {1--32},
-title = {{3D3C Real Virtual Worlds Defined : The Immense Potential of Merging 3D , Community , Creation , and Commerce 3D3C Real Virtual Worlds Defined : The Immense Potential of Merging 3D , Community , Creation , and Commerce}},
-url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:3D3C+Real+Virtual+Worlds+Defined\#0},
-volume = {1},
-year = {2008}
-}
 @article{Sivan2009,
 annote = {        From Duplicate 1 (                           Overview: State of Virtual Worlds Standards in 2009                         - Sivan, Yesha )
                 
@@ -3470,6 +3480,16 @@ url = {http://journals.tdl.org/jvwr/article/view/671/539},
 volume = {2},
 year = {2009}
 }
+@article{Sivan2011,
+abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {3},
+title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
+url = {https://journals.tdl.org/jvwr/article/view/6140},
+volume = {4},
+year = {2011}
+}
 @article{Sivan2008,
 annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
 author = {Sivan, Yesha},
@@ -3477,6 +3497,19 @@ journal = {Journal of Virtual Worlds Research},
 number = {2},
 title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
 url = {http://journals.tdl.org/jvwr/article/view/359},
+volume = {1},
+year = {2008}
+}
+@article{Sevan2008,
+annote = {Very good \& thorough background/introduction to 'real virtual worlds', assuming no previous knowledge into the subject. Focuses strongly on Second Life.},
+author = {Sivan, Yesha},
+issn = {19418477},
+journal = {Journal of Virtual Worlds Research},
+keywords = {0,3d,attribution no derivative works 3,commerce,community,creation,journal virtual,second life,under creative commons,united states license,virtual worlds,work copyrighted,worlds research},
+number = {1},
+pages = {1--32},
+title = {{3D3C Real Virtual Worlds Defined : The Immense Potential of Merging 3D , Community , Creation , and Commerce 3D3C Real Virtual Worlds Defined : The Immense Potential of Merging 3D , Community , Creation , and Commerce}},
+url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:3D3C+Real+Virtual+Worlds+Defined\#0},
 volume = {1},
 year = {2008}
 }
@@ -3721,6 +3754,13 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/21467889},
 volume = {27},
 year = {2011}
 }
+@book{Terashima2001,
+editor = {Terashima, Nobuyoshi and Tiffin, John},
+isbn = {041526104X},
+publisher = {Routledge},
+title = {{HyperReality: Paradigm for the Third Millenium}},
+year = {2001}
+}
 @article{Thomas2009,
 abstract = {Looks at how through-walls collaboration lets users in the field work in real time with users indoors who have access to reference materials, a global picture, and advanced technology. The concept leverages ubiquitous workspaces, augmented reality, and wearable computers.},
 annote = {        From Duplicate 1 (                           Through-Walls Collaboration                         - Piekarski, Wayne; Thomas, Bruce H. )
@@ -3890,7 +3930,6 @@ year = {2011}
 }
 @misc{Venables2013,
 annote = {Quote from Palmer Luckey
-
         
 'Luckey always shared his plans online to the few stalwarts of the then-small, virtual reality scene "since it kind of crashed in the 90s" he qualifies.'},
 author = {Venables, Michael},
@@ -4103,7 +4142,7 @@ address = {New York, New York, USA},
 author = {Wojciechowski, Rafal and Walczak, Krzysztof and White, Martin and Cellary, Wojciech},
 booktitle = {Proceedings of the ninth international conference on 3D Web technology - Web3D '04},
 doi = {10.1145/985040.985060},
-file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wojciechowski et al. - 2004 - Building Virtual and Augmented Reality museum exhibitions.pdf:pdf},
+file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wojciechowski et al. - 2004 - Building Virtual and Augmented Reality museum exhibitions(2).pdf:pdf},
 isbn = {1581138458},
 keywords = {VRML,augmented reality,cultural heritage,virtual reality},
 month = apr,
@@ -4191,12 +4230,6 @@ title = {{Autonomy, Interaction, and Presence}},
 volume = {1},
 year = {1992}
 }
-@inproceedings{Zhao2002,
-author = {Zhao, Shanyang},
-booktitle = {Proceedings of the fifth annual international workshop on Presence},
-title = {{Reconceptualizing Presence: Differentiating Between Mode of Presence and Sense of Presence}},
-year = {2002}
-}
 @article{Zhao2003,
 abstract = {This paper contributes to the presence literature by explicating the meanings and subtypes of copresence. Copresence is defined here as consisting of two dimensions: copresence as mode of being with others, and copresence as sense of being with others. Mode of copresence refers to the physical conditions that structure human interaction. Six such conditions are delineated. Sense of copresence, on the other hand, refers to the subjective experience of being with others that an individual acquires in interaction. The main argument of this paper is that mode of copresence affects sense of copresence, and knowledge of how the former affects the latter will benefit copresence design. ABSTRACT FROM AUTHOR},
 author = {Zhao, Shanyang},
@@ -4211,36 +4244,9 @@ url = {http://www.mitpressjournals.org/doi/abs/10.1162/105474603322761261},
 volume = {12},
 year = {2003}
 }
-@article{Hill2004,
-abstract = { Realtime image processing provides a general framework for robust mediated reality problems. This paper presents a realtime mediated reality system that is built upon realtime image processing algorithms. It has been shown that the graphics processing unit (GPU) is capable of efficiently performing image processing tasks. The system presented uses a parallel GPU architecture for image processing that enables realtime mediated reality. Our implementation has many benefits; the graphics hardware has high throughput and low latency; the GPU's are not prone to jitter. Additionally, the CPU is kept available for user applications. The system is easily constructed, consisting of readily available commodity hardware.},
-author = {Hill, R. and Fung, J. and Mann, S.},
-issn = {1522-4880},
-journal = {2004 International Conference on Image Processing, 2004. ICIP '04.},
-title = {{A parallel mediated reality platform}},
-volume = {5},
-year = {2004}
-}
-@misc{Regenbrecht2002a,
-abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
-author = {Regenbrecht, Holger and Schubert, Thomas},
-booktitle = {Presence: Teleoperators and Virtual Environments},
-issn = {1054-7460},
-number = {4},
-pages = {425--434},
-title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
-volume = {11},
+@inproceedings{Zhao2002,
+author = {Zhao, Shanyang},
+booktitle = {Proceedings of the fifth annual international workshop on Presence},
+title = {{Reconceptualizing Presence: Differentiating Between Mode of Presence and Sense of Presence}},
 year = {2002}
-}
-@incollection{Schubert1999,
-abstract = {Schubert, T.W., Friedman, F., \& Regenbrecht, H.T. (1999). Embodied presence in virtual environments. In: Paton R, Neilson I (Eds.). Visual representations and interpretations. Springer-Verlag, London, pp. 268–278.},
-author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
-booktitle = {Visual representations and interpretations},
-doi = {10.1007/978-1-4471-0563-3\_30},
-editor = {{Paton R}, Neilson I},
-isbn = {9781441909183},
-pages = {268--278},
-publisher = {Springer-Verlag},
-title = {{Embodied presence in virtual environments}},
-url = {http://link.springer.com/chapter/10.1007/978-1-4471-0563-3\_30},
-year = {1999}
 }
